[package]
name = "verona-rt-sys"
version = "0.0.1"
edition = "2021"
description = "Low level bindings to verona-rt."
# homepage.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cmake = "0.1.50"

[build-dependencies]
cmake = "0.1.50"

[features]
systematic_testing = []
flight_recorder = []