[package]
name = "verona-rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
verona-rt-sys = { version = "0.1.0", path = "../verona-rt-sys" }

[features]
systematic_testing = ["verona-rt-sys/systematic_testing"]
flight_recorder = ["verona-rt-sys/flight_recorder"]

[dev-dependencies]
cstr = "0.2.11"
