[package]
name = "verona-rt"
version = "0.0.1"
edition = "2021"
description = "Idiomatic binding to the verona runtime"
license.workspace = true
repository.workspace = true

[dependencies]
verona-rt-sys = { version = "=0.0.1", path = "../verona-rt-sys" }

[features]
systematic_testing = ["verona-rt-sys/systematic_testing"]
flight_recorder = ["verona-rt-sys/flight_recorder"]

[dev-dependencies]
cstr = "0.2.11"
